      - values 'inf', 'infinity' and 'nan' (and their capitalized
        variants) are no longer treated as numeric.
    - COD::CIF::Data::CODFlags:
      - has_partially_occupied_ordered_atoms() now unpacks CIF numbers
        before doing numerical comparisons with them;
      - has_partially_occupied_ordered_atoms() treats only occupancies
        less than 1 as partial.
    - COD::CIF::Unicode2CIF:
      - removed the unofficial CIF special codes for letters 'ů' and 'Ů'
        ('\"u', '\"U');
      - updated the unicode2cif() subroutine to properly encode the '≠'
        sign as '\\neq' instead of '=&#x0338;';
      - updated most of CIF special codes with the '\\' prefix to not require
        a trailing space symbol (' '). The '\\db ', '\\tb ' and '\\ddb ' codes
        were left unchanged since IUCr explicitly specifies that they should
        be followed by a space.

cod-tools (3.1.0)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_from_chemistry_opensmiles() subroutine;
      - the neighbour_list_from_cif() subroutine.
    - COD::CIF::Data::AtomList:
      - updated the atom property extraction logic to determine atom
        oxidation states from atom chemical types and atom names;
      - the 'exclude_hydrogens' option to the atom_array_from_cif()
        subroutine that excludes hydrogen atoms;
      - the get_atom_chemical_type() subroutine.
    - COD::CIF::Tags::Merge:
      - the 'tags' option to the merge_datablocks() subroutine to provide
        a list of data names to merge.
    - cif_filter:
      - distribution of '_publ_author_id_orcid' data item values from
        the global CIF data block to the rest of the data blocks.
    - cif_select:
      - the '--one-data-item-per-row' and '--one-data-item-per-column'
        options.
    - cif_sort_atoms:
      - the '--ascending-numerical', '--descending-numerical',
        '--ascending-lexical', '--descending-lexical' options.
  * Changed:
    - COD::CIF::DDL::DDLm::Validate: