@@ -26,16 +26,10 @@ Rh1 Rh 0.281618 0.5 0.178915 0.02024(6) 1 S d
 Rh1_2_555 Rh 0.718382 0.5 0.821085 0.02024(6) 1 S d
 Rh1_3_555 Rh 0.781618 0 0.178915 0.02024(6) 1 S d
 Rh1_4_555 Rh 0.218382 0 0.821085 0.02024(6) 1 S d
-Rh1_5_555 Rh 0.718382 0.5 0.821085 0.02024(6) 1 S d
-Rh1_7_555 Rh 0.218382 0 0.821085 0.02024(6) 1 S d
-Rh1_8_555 Rh 0.781618 0 0.178915 0.02024(6) 1 S d
 Rh2 Rh 0.239857 0.5 0.328316 0.02108(6) 1 S d
 Rh2_2_555 Rh 0.760143 0.5 0.671684 0.02108(6) 1 S d
 Rh2_3_555 Rh 0.739857 0 0.328316 0.02108(6) 1 S d
 Rh2_4_555 Rh 0.260143 0 0.671684 0.02108(6) 1 S d
-Rh2_5_555 Rh 0.760143 0.5 0.671684 0.02108(6) 1 S d
-Rh2_7_555 Rh 0.260143 0 0.671684 0.02108(6) 1 S d
-Rh2_8_555 Rh 0.739857 0 0.328316 0.02108(6) 1 S d
 Cl1 Cl 0.2765 0.58167 0.27209 0.02835(12) 1 . d
 Cl1_2_555 Cl 0.7235 0.58167 0.72791 0.02835(12) 1 . d
 Cl1_3_555 Cl 0.7765 0.0816699999999999 0.27209 0.02835(12) 1 . d
@@ -64,16 +58,10 @@ O1 O 0.27398 0.5 0.98281 0.0257(4) 1 S d
 O1_2_555 O 0.72602 0.5 0.01719 0.0257(4) 1 S d
 O1_3_555 O 0.77398 0 0.98281 0.0257(4) 1 S d
 O1_4_555 O 0.22602 0 0.01719 0.0257(4) 1 S d
-O1_5_555 O 0.72602 0.5 0.01719 0.0257(4) 1 S d
-O1_7_555 O 0.22602 0 0.01719 0.0257(4) 1 S d
-O1_8_555 O 0.77398 0 0.98281 0.0257(4) 1 S d
 O2 O 0.29062 0.5 0.51239 0.0237(4) 1 S d
 O2_2_555 O 0.70938 0.5 0.48761 0.0237(4) 1 S d
 O2_3_555 O 0.79062 0 0.51239 0.0237(4) 1 S d
 O2_4_555 O 0.20938 0 0.48761 0.0237(4) 1 S d
-O2_5_555 O 0.70938 0.5 0.48761 0.0237(4) 1 S d
-O2_7_555 O 0.20938 0 0.48761 0.0237(4) 1 S d
-O2_8_555 O 0.79062 0 0.51239 0.0237(4) 1 S d
 C1 C 0.3037 0.38806 0.03733 0.0245(4) 1 . d
 C1_2_555 C 0.6963 0.38806 0.96267 0.0245(4) 1 . d
 C1_3_555 C 0.8037 0.88806 0.03733 0.0245(4) 1 . d
@@ -142,16 +130,10 @@ C6 C 0.31954 0.5 0.88411 0.0401(8) 1 S d
 C6_2_555 C 0.68046 0.5 0.11589 0.0401(8) 1 S d
 C6_3_555 C 0.81954 0 0.88411 0.0401(8) 1 S d
 C6_4_555 C 0.18046 0 0.11589 0.0401(8) 1 S d
-C6_5_555 C 0.68046 0.5 0.11589 0.0401(8) 1 S d
-C6_7_555 C 0.18046 0 0.11589 0.0401(8) 1 S d
-C6_8_555 C 0.81954 0 0.88411 0.0401(8) 1 S d
 C7 C 0.35997 0.5 0.8544 0.0738(15) 1 S d
 C7_2_555 C 0.64003 0.5 0.1456 0.0738(15) 1 S d
 C7_3_555 C 0.85997 0 0.8544 0.0738(15) 1 S d
 C7_4_555 C 0.14003 0 0.1456 0.0738(15) 1 S d
-C7_5_555 C 0.64003 0.5 0.1456 0.0738(15) 1 S d
-C7_7_555 C 0.14003 0 0.1456 0.0738(15) 1 S d
-C7_8_555 C 0.85997 0 0.8544 0.0738(15) 1 S d
 H7A H 0.357 0.5431 0.824 0.111 0.50 PR calc
 H7A_2_555 H 0.643 0.5431 0.176 0.111 0.50 PR calc
 H7A_3_555 H 0.857 0.0430999999999999 0.824 0.111 0.50 PR calc
@@ -180,9 +162,6 @@ C8 C 0.26856 0.5 0.81614 0.0668(13) 1 S d
 C8_2_555 C 0.73144 0.5 0.18386 0.0668(13) 1 S d
 C8_3_555 C 0.76856 0 0.81614 0.0668(13) 1 S d
 C8_4_555 C 0.23144 0 0.18386 0.0668(13) 1 S d
-C8_5_555 C 0.73144 0.5 0.18386 0.0668(13) 1 S d
-C8_7_555 C 0.23144 0 0.18386 0.0668(13) 1 S d
-C8_8_555 C 0.76856 0 0.81614 0.0668(13) 1 S d
 H8A H 0.268 0.5353 0.7783 0.100 0.50 PR calc
 H8A_2_555 H 0.732 0.5353 0.2217 0.100 0.50 PR calc
 H8A_3_555 H 0.768 0.0352999999999999 0.7783 0.100 0.50 PR calc
@@ -459,16 +438,10 @@ C27 C 0.38981 0.5 0.60709 0.0326(7) 1 S d
 C27_2_555 C 0.61019 0.5 0.39291 0.0326(7) 1 S d
 C27_3_555 C 0.88981 0 0.60709 0.0326(7) 1 S d
 C27_4_555 C 0.11019 0 0.39291 0.0326(7) 1 S d
-C27_5_555 C 0.61019 0.5 0.39291 0.0326(7) 1 S d
-C27_7_555 C 0.11019 0 0.39291 0.0326(7) 1 S d
-C27_8_555 C 0.88981 0 0.60709 0.0326(7) 1 S d
 C28 C 0.44557 0.5 0.63716 0.0431(8) 1 S d
 C28_2_555 C 0.55443 0.5 0.36284 0.0431(8) 1 S d
 C28_3_555 C 0.94557 0 0.63716 0.0431(8) 1 S d
 C28_4_555 C 0.05443 0 0.36284 0.0431(8) 1 S d
-C28_5_555 C 0.55443 0.5 0.36284 0.0431(8) 1 S d
-C28_7_555 C 0.05443 0 0.36284 0.0431(8) 1 S d
-C28_8_555 C 0.94557 0 0.63716 0.0431(8) 1 S d
 H28A H 0.4589 0.5432 0.6675 0.065 0.50 PR calc
 H28A_2_555 H 0.5411 0.5432 0.3325 0.065 0.50 PR calc
 H28A_3_555 H 0.9589 0.0432000000000001 0.6675 0.065 0.50 PR calc
@@ -497,9 +470,6 @@ C29 C 0.37631 0.5 0.67643 0.0396(8) 1 S d
 C29_2_555 C 0.62369 0.5 0.32357 0.0396(8) 1 S d
 C29_3_555 C 0.87631 0 0.67643 0.0396(8) 1 S d
 C29_4_555 C 0.12369 0 0.32357 0.0396(8) 1 S d
-C29_5_555 C 0.62369 0.5 0.32357 0.0396(8) 1 S d
-C29_7_555 C 0.12369 0 0.32357 0.0396(8) 1 S d
-C29_8_555 C 0.87631 0 0.67643 0.0396(8) 1 S d
 H29A H 0.3959 0.4639 0.7135 0.059 0.50 PR calc
 H29A_2_555 H 0.6041 0.4639 0.2865 0.059 0.50 PR calc
 H29A_3_555 H 0.8959 0.9639 0.7135 0.059 0.50 PR calc
