@@ -59,6 +59,10 @@ cod-tools (unreleased)
         before doing numerical comparisons with them;
       - has_partially_occupied_ordered_atoms() treats only occupancies
         less than 1 as partial.
+    - COD::CIF::Data::SymmetryGenerator:
+      - coinciding symmetry equivalents of an atom which do not coincide
+        with the generating atom itself are merged in symop_generate_atoms()
+        if duplicate removal is requested.
     - COD::CIF::Unicode2CIF:
       - removed the unofficial CIF special codes for letters 'ů' and 'Ů'
         ('\"u', '\"U');
